--- a/Projects/xxdCmdb/web/templates/include/release.html
+++ b/Projects/xxdCmdb/web/templates/include/release.html
@@ -53,7 +53,7 @@
         </tr>
         <tr>
             <td>项目名</td>
-            <td colspan="4">{{ response.data.release_user }}</td>
+            <td colspan="4">{{ response.data.release_name.name }}</td>
         </tr>
         <tr>
             <td>发布ID</td>
@@ -61,109 +61,61 @@
         </tr>
         <tr>
             <td>发布环境</td>
-            <td colspan="4">{{ response.data.os }}</td>
+            <td colspan="4">{{ response.data.release_env.name }}</td>
         </tr>
         <tr>
             <td>发布类型</td>
-            <td colspan="4">{{ response.data.sn }}</td>
+            <td colspan="4">{{ response.data.release_type.name }}</td>
         </tr>
         <tr>
-            <td>分支</td>
-            <td colspan="4">{{ response.data.model }}</td>
+            <td>发布分支</td>
+            <td colspan="4">{{ response.data.release_git_branch }}</td>
         </tr>
         <tr>
             <td>JDK版本</td>
-            <td colspan="4">{{ response.data.cpu }}</td>
+            <td colspan="4">{{ response.data.release_jdk_version }}</td>
         </tr>
         <tr>
             <td>申请发布</td>
-            <td colspan="4">{{ response.data.cpu_num }}</td>
+            <td colspan="4">{{ response.data.apply_user }}</td>
         </tr>
         <tr>
             <td>申请时间</td>
-            <td colspan="4">{{ response.data.core_num }}</td>
+            <td colspan="4">{{ response.data.apply_time }}</td>
         </tr>
         <tr>
             <td>发布说明</td>
-            <td colspan="4">{{ response.data.idc }}</td>
+            <td colspan="4">{{ response.data.release_reason }}</td>
         </tr>
         <tr>
             <td>GIT地址</td>
-            <td colspan="4">{{ response.data.cabinet }}</td>
+            <td colspan="4">{{ response.data.release_git_url }}</td>
         </tr>
 
 
-        <!-- 网卡信息开始 -->
+        <!-- 项目流程开始 -->
         <tr>
             <th colspan="5" class="title f14 th" style="border-left:2px solid #0488cd;"><span class="padding-l-8">发布任务流程</span></th>
         </tr>
         <tr>
-            <td>名称</td>
-            <td>MAC地址</td>
-            <td>IP地址</td>
-            <td>上联交换机</td>
-            <td>上联交换机端口</td>
+            <th colspan="5">
+                <img src="/static/imgs/release_1.png" style="display: inline-block">
+            </th>
         </tr>
-        {% for item in response.data.nic.all %}
-            <tr>
-                <td>{{ item.name }}</td>
-                <td>{{ item.hwaddr }}</td>
-                <td>{{ item.ipaddrs }}</td>
-                <td>{{ item.switch_ip }}</td>
-                <td>{{ item.switch_port }}</td>
-            </tr>
-        {% endfor %}
-        <!-- 网卡信息结束 -->
+        <!-- 项目流程结束 -->
 
-        <!-- 硬盘信息开始 -->
+        <!-- 项目日志开始 -->
         <tr>
             <th colspan="5" class="title f14" style="border-left:2px solid #0488cd;">
                 <span class="padding-l-8">发布信息日志</span>
             </th>
         </tr>
-        <tr>
-            <td>插槽</td>
-            <td>容量GB</td>
-            <td >接口类型</td>
-            <td >转速(rpm)</td>
-            <td>型号</td>
-        </tr>
-
-        {% for item in response.data.disk.all %}
+        {% for item in log.data_list %}
             <tr>
-                <td>{{ item.slot }}</td>
-                <td>{{ item.capacity }}</td>
-                <td >{{ item.model }}</td>
-                <td >{{ item.rpm }}</td>
-                <td>{{ item.pd_type }}</td>
+                <td colspan="5" style="padding-left: 0; border: 1px none;">[ {{ item.time|date:"Y-m-d H:i" }} ]  {{ item.msg }}</td>
             </tr>
         {% endfor %}
-        <!-- 硬盘信息结束 -->
-
-        <!-- 内存信息开始 -->
-{#        <tr>#}
-{#            <th colspan="5" class="title f14" style="border-left:2px solid #0488cd;">#}
-{#                <span class="padding-l-8">内存信息</span>#}
-{#            </th>#}
-{#        </tr>#}
-{#        <tr>#}
-{#            <td>插槽</td>#}
-{#            <td>容量</td>#}
-{#            <td>频率</td>#}
-{#            <td colspan="2">型号</td>#}
-{#        </tr>#}
-{##}
-{#        {% for item in response.data.memory.all %}#}
-{#            <tr>#}
-{#                <td>{{ item.slot }}</td>#}
-{#                <td>{{ item.capacity }}</td>#}
-{#                <td>{{ item.speed }}</td>#}
-{#                <td colspan="2">{{ item.model }}</td>#}
-{#            </tr>#}
-{#        {% endfor %}#}
-        <!-- 内存信息结束 -->
-
-
+        <!-- 项目日志结束 -->
         </tbody>
     </table>
 </div>
