--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -42,11 +42,11 @@
             <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>P M 审核</span>
         </a>
-        <a id="menu_audit" class="menu-item" href="/audit.html">
+        <a id="menu_audit_db" class="menu-item" href="/audit_db.html">
             <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>D B 审核</span>
         </a>
-        <a id="menu_audit" class="menu-item" href="/audit.html">
+        <a id="menu_audit_sa" class="menu-item" href="/audit_sa.html">
             <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>S A 审核</span>
         </a>
