--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -26,38 +26,41 @@
             <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>权限查询</span>
         </a>
-        <a id="menu_create" class="menu-item" href="/_project.html">
-            <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>项目创建</span>
-        </a>
-        <a id="menu_list" class="menu-item" href="/project_list_r.html">
+{#        <a id="menu_create" class="menu-item" href="/_project.html">#}
+{#            <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>项目创建</span>#}
+{#        </a>#}
+        <a id="menu_list" class="menu-item" href="/projects_read.html">
             <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目列表</span>
         </a>
-        <a id="menu_online" class="menu-item" href="/apply.html">
-            <i class="fa fa-ioxhost" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>申请记录</span>
-        </a>
-        <a id="menu_audit" class="menu-item" href="/audit.html">
-            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>P M 审核</span>
-        </a>
-        <a id="menu_audit_db" class="menu-item" href="/audit_db.html">
-            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>D B 审核</span>
-        </a>
-        <a id="menu_audit_sa" class="menu-item" href="/audit_sa.html">
-            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>S A 审核</span>
-        </a>
-        <a id="menu_online" class="menu-item" href="/release.html">
+{#        <a id="menu_online" class="menu-item" href="/apply_read.html">#}
+{#            <i class="fa fa-ioxhost" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>申请记录</span>#}
+{#        </a>#}
+        <div id="user_menu">
+
+        </div>
+{#        <a id="menu_audit" class="menu-item" href="/audit.html">#}
+{#            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>P M 审核</span>#}
+{#        </a>#}
+{#        <a id="menu_audit_db" class="menu-item" href="/audit_db.html">#}
+{#            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>D B 审核</span>#}
+{#        </a>#}
+{#        <a id="menu_audit_sa" class="menu-item" href="/audit_sa.html">#}
+{#            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>S A 审核</span>#}
+{#        </a>#}
+        <a id="menu_record" class="menu-item" href="/apply_read.html">
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>上线记录</span>
+            <span>上线查询</span>
         </a>
-        <a id="menu_config" class="menu-item" href="/config.html">
-            <i class="fa fa-cog" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>配置修改</span>
-        </a>
+{#        <a id="menu_config" class="menu-item" href="/config.html">#}
+{#            <i class="fa fa-cog" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
+{#            <span>配置修改</span>#}
+{#        </a>#}
 {#        <a id="menu_list" class="menu-item" href="/project_list_r.html">#}
 {#            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
 {#            <span>发布列表</span>#}
