--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -38,7 +38,7 @@
             <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目创建</span>
         </a>
-        <a id="menu_list" class="menu-item" href="/project_list.html">
+        <a id="menu_list" class="menu-item" href="/project_admin.html">
             <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目列表</span>
         </a>
