--- a/Projects/xxdCmdb/web/templates/audit_sa.html
+++ b/Projects/xxdCmdb/web/templates/audit_sa.html
@@ -257,6 +257,9 @@
                         if(response.status){
                             alert('审核成功！');
                             location.reload();
+                        }else {
+                            alert('审核失败！');
+                            location.reload();
                         }
                     }
                 })
