--- a/Projects/xxdCmdb/web/templates/release_detail.html
+++ b/Projects/xxdCmdb/web/templates/release_detail.html
@@ -8,7 +8,7 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <li><a href="/cmdb.html">首页</a></li>
-        <li><a href="/project_list_r.html">项目列表</a></li>
+        <li><a href="/projects_read.html">项目列表</a></li>
         <li class="active">发布详细</li>
     </ol>
     <div style="padding: 5px 8px;">
