--- a/Projects/xxdCmdb/web/templates/audit_sa.html
+++ b/Projects/xxdCmdb/web/templates/audit_sa.html
@@ -169,7 +169,37 @@
             var t2 = window.setTimeout(do_menu, 200);
             // 项目列表刷新数据定时器
             var t1 = window.setTimeout(do_ajax, 200);
+            window.setTimeout(add_style, 200)
         });
+
+        function add_style() {
+            $('#table_body').children().each(function () {
+              var v = $(this).children().next().next().next().next().next().next().next().next().html();
+{#              var vv = $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().html();#}
+              if(v!='SA待审'){
+                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().first().attr('onclick', '');
+                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().first().attr('style', 'color:grey');
+              }
+              if(v!='待发布'){
+                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');
+                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');
+              }
+              if(v=='发布失败'){
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ff9999; margin-top:4px; margin-left:6px; margin-right:-20px')
+                }else if(v=='发布成功'){
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(92,184,92); margin-top:4px; margin-left:6px; margin-right:-20px')
+                }else if(v=='待发布'){
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ffcc99; margin-top:4px; margin-left:6px; margin-right:-20px')
+                }else if(v=='已撤销'){
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', '')
+                }else if(v=='发布中'){
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #99ccff; margin-top:4px; margin-left:6px; margin-right:-20px')
+                }
+                else {
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ffff99; margin-top:4px; margin-left:6px; margin-right:-20px')
+                }
+            })
+        }
 
         function do_ajax() {
             var i = 0;
@@ -239,6 +269,7 @@
 
         function ChangePage(id) {
             $.nbDataLists(id);
+            window.setTimeout(add_style, 200)
         }
 
         function do_menu() {
