--- a/Projects/xxdCmdb/web/templates/users_list_bak.html
+++ b/Projects/xxdCmdb/web/templates/users_list_bak.html
@@ -64,9 +64,9 @@
 {#            </div>#}
 
             <div class="table-responsive table-area">
-                <table class="table table-striped table-bordered" >
+                <table class="table table-striped table-bordered" style="display: none" >
                     <!-- 表格标题开始 -->
-                    <thead id="table_head">
+                    <thead id="table_head" style="display: none">
                     <tr>
 
                     </tr>
@@ -255,35 +255,7 @@
         $(function () {
             $.initMenu('#menu_user_profile');
             $.nbDataList('/users.html', 1);
-            window.setTimeout(add_style, 200)
         });
-
-        function add_style() {
-            $('#table_body').children().each(function () {
-                var group_name = $(this).children().next().next().next().first().html();
-                if(group_name=='admin'){
-                    $(this).children().next().next().next().first().attr('style', 'color: green;font-weight:bold');
-                }else if(group_name=='develop'){
-                    $(this).children().next().next().next().first().attr('style', 'color: #FFD306;font-weight:bold');
-                }else if(group_name=='QA'){
-                    $(this).children().next().next().next().first().attr('style', 'color: #FF9D6F;font-weight:bold');
-                }else if(group_name=='pm'){
-                    $(this).children().next().next().next().first().attr('style', 'color: #5CADAD;font-weight:bold');
-                }else if(group_name=='dba'){
-                    $(this).children().next().next().next().first().attr('style', 'color: #2894FF;font-weight:bold');
-                }else if(group_name=='sa'){
-                    $(this).children().next().next().next().first().attr('style', 'color: #B15BFF;font-weight:bold');
-                } else {
-                    $(this).children().next().next().next().first().attr('style', 'color: #7B7B7B;font-weight:bold');
-                }
-            })
-        }
-
-        function ChangePage(id) {
-                $.nbDataLists(id);
-                window.setTimeout(add_style, 200)
-            }
-
         function edit_user(ths, nid) {
             $('#edit_example').modal();
 
@@ -291,7 +263,7 @@
             var business_one_list = [];
             var business_two_list = [];
             var business_three_list = [];
-            var group_id = $(ths).parent().prev().attr('value');
+            var group_id = $(ths).parent().prev().prev().prev().prev().prev().text();
             $('#groups').selectpicker('val', group_id);
 
             $(ths).parent().prev().prev().prev().children().each(function () {
