--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -53,14 +53,14 @@
 {#            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
 {#            <span>S A 审核</span>#}
 {#        </a>#}
+        <a id="menu_config" class="menu-item" href="/configs.html">
+            <i class="fa fa-cog" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>配置修改</span>
+        </a>
         <a id="menu_record" class="menu-item" href="/apply_read.html">
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>上线查询</span>
         </a>
-{#        <a id="menu_config" class="menu-item" href="/config.html">#}
-{#            <i class="fa fa-cog" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
-{#            <span>配置修改</span>#}
-{#        </a>#}
 {#        <a id="menu_list" class="menu-item" href="/project_list_r.html">#}
 {#            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
 {#            <span>发布列表</span>#}
