--- a/Projects/xxdCmdb/web/templates/include/header_menu.html
+++ b/Projects/xxdCmdb/web/templates/include/header_menu.html
@@ -24,6 +24,11 @@
         <a id="username_cookie" class="user-menu right" href="/login.html">
             登陆
         </a>
+
+        <a class="user-menu right" href="/document-1.html" target="_blank">
+            [ 更新 ]
+        </a>
+
         <a class="user-menu right">
             消息
             <i class="fa fa-commenting-o" aria-hidden="true"></i>
@@ -41,5 +46,6 @@
             <i class="fa fa-bell-o" aria-hidden="true"></i>
             <span class="badge bg-danger">0</span>
         </a>
+
 
     </div>
