--- a/Projects/xxdCmdb/web/templates/document_1.html
+++ b/Projects/xxdCmdb/web/templates/document_1.html
@@ -315,7 +315,7 @@ img {
 <h2>10、运维审核</h2>
 <p><img src="http://i.imgur.com/6qSysFO.jpg" /></p>
 <h2>11、相关项目配置文件修改</h2>
-<p><img src="http://i.imgur.com/ByEHrdc.jpg" /></p>
+<p><img src="http://i.imgur.com/KTNV3Ud.jpg" /></p>
 
 </body>
 </html>
