--- a/Projects/xxdCmdb/web/templates/config.html
+++ b/Projects/xxdCmdb/web/templates/config.html
@@ -98,7 +98,7 @@
                         if(response.status){
                             alert('更新配置文件成功！')
                         }else {
-                            alert('服务端文件权限未设置可写')
+                            alert('服务端文件读写权限拒绝')
                         }
                     }
                 })
