--- a/Projects/xxdCmdb/web/templates/document_1.html
+++ b/Projects/xxdCmdb/web/templates/document_1.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>cmdb更新-审批流</title>
+<title>cmdb更新</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
-/* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
-/* Author: Nicolas Hery - http://nicolashery.com */
-/* Version: b13fe65ca28d2e568c6ed5d7f06581183df8f2ff */
-/* Source: https://github.com/nicolahery/markdownpad-github */
 
 /* RESET
 =============================================================================*/
@@ -319,4 +315,3 @@ img {
 
 </body>
 </html>
-<!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
